# hotel-comparison-report

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  noxfile.py  pyproject.toml
.agents/plugins/: marketplace.json
.claude/skills/hotel-comparison-report/: SKILL.md
.codex-plugin/: plugin.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml
assets/: source_template.docx
docs/: docx-templating-notes.md
examples/: README.md  example_report.docx
hotel-comparison-report/: SKILL.md
hotel-comparison-report-workspace/: generate_review_py39.py  grade_docx.py
hotel-comparison-report-workspace/iteration-1/: benchmark.json  benchmark.md  feedback.json
hotel-comparison-report-workspace/iteration-1/eval-0-two-hotel-clean-report/: eval_metadata.json
hotel-comparison-report-workspace/iteration-1/eval-0-two-hotel-clean-report/with_skill/outputs/: Hotel Comparison Report - Martinez_Chen.docx  martinez_chen_report.json  transcript_summary.md
hotel-comparison-report-workspace/iteration-1/eval-0-two-hotel-clean-report/with_skill/run-1/: grading.json  timing.json
hotel-comparison-report-workspace/iteration-1/eval-0-two-hotel-clean-report/without_skill/: grading.json
hotel-comparison-report-workspace/iteration-1/eval-0-two-hotel-clean-report/without_skill/outputs/: Martinez-Chen_Wedding_Hotel_Comparison_Report.docx  transcript_summary.md
hotel-comparison-report-workspace/iteration-1/eval-0-two-hotel-clean-report/without_skill/run-1/: timing.json
hotel-comparison-report-workspace/iteration-1/eval-1-edge-cases-long-roomtype-unverified-ta/: eval_metadata.json
hotel-comparison-report-workspace/iteration-1/eval-1-edge-cases-long-roomtype-unverified-ta/with_skill/: grading.json  timing.json
hotel-comparison-report-workspace/iteration-1/eval-1-edge-cases-long-roomtype-unverified-ta/with_skill/outputs/: Hotel Comparison Report - Birch_Kowalski.docx  birch_kowalski_report.json  transcript_summary.md
hotel-comparison-report-workspace/iteration-1/eval-1-edge-cases-long-roomtype-unverified-ta/without_skill/outputs/: Birch-Kowalski_Wedding_Hotel_Comparison_Report.docx  build_report.py  transcript_summary.md
hotel-comparison-report-workspace/iteration-1/eval-1-edge-cases-long-roomtype-unverified-ta/without_skill/run-1/: grading.json  timing.json
hotel-comparison-report/assets/: example_report.json
hotel-comparison-report/evals/: evals.json
hotel-comparison-report/scripts/: build_report.py
skills/hotel-comparison-report/: SKILL.md
src/hotel_report/: __init__.py  _validate.py  build_template.py  cli.py  models.py  render.py  schema.py
src/hotel_report/data/: example_report.json
src/hotel_report/schema/: report.schema.json
src/hotel_report/templates/: hotel_comparison_report.docx
tests/: conftest.py  test_benchmark.py  test_build_template.py  test_cli.py  test_models.py  test_property.py  test_render.py  test_schema.py  test_snapshot.py  test_units.py
tests/__snapshots__/: test_snapshot.ambr
