[project]
name = "hotel-comparison-report"
version = "0.1.0"
description = "Deterministically render the JC Room Blocks Hotel Comparison Report .docx from JSON data."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "docxtpl>=0.20",
    "jsonschema>=4.0",
    "python-docx>=1.1",  # imported directly in render.py / build_template.py
    "jinja2>=3.1",       # imported directly in render.py
]

[project.scripts]
hotel-report = "hotel_report.cli:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hotel_report"]

# Explicitly ship the non-.py package data in both the sdist and wheel. The repo
# .gitignore broadly ignores *.docx (only the template is force-tracked), so we
# force-include these paths rather than rely on VCS file discovery.
[tool.hatch.build]
artifacts = [
    "/src/hotel_report/templates/*.docx",
    "/src/hotel_report/schema/*.json",
    "/src/hotel_report/data/*.json",
]

[tool.ruff]
line-length = 110
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
