[project]
name = "hotel-comparison-report"
version = "0.1.0"
description = "Deterministically render the JC Room Blocks Hotel Comparison Report .docx from JSON data."
readme = "README.md"
requires-python = ">=3.14"
license = { text = "MIT" }
dependencies = [
    "docxtpl>=0.20",
    "pydantic>=2",       # the data contract (hotel_report.models)
    "python-docx>=1.1",  # imported directly in render.py / build_template.py
    "jinja2>=3.1",       # imported directly in render.py
]

[project.scripts]
hotel-report = "hotel_report.cli:main"

[dependency-groups]
dev = [
    # test
    "pytest>=8",
    "pytest-cov>=5",
    "pytest-randomly>=3",
    "pytest-xdist>=3",
    "pytest-benchmark>=4",
    "hypothesis>=6",
    "syrupy>=4",
    "mutmut>=2",
    # lint / type / format / security / spelling / docstrings
    "ruff>=0.6",
    "mypy>=1.10",
    "pylint>=3",
    "black>=24",
    "bandit>=1.7",
    "codespell>=2.3",
    "interrogate>=1.7",
    # orchestration
    "nox>=2024",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hotel_report"]

# Explicitly ship the non-.py package data in both the sdist and wheel. The repo
# .gitignore broadly ignores *.docx (only the template is force-tracked), so we
# force-include these paths rather than rely on VCS file discovery.
[tool.hatch.build]
artifacts = [
    "/src/hotel_report/templates/*.docx",
    "/src/hotel_report/data/*.json",
]

[tool.ruff]
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
# E/F pycodestyle+pyflakes, I isort, UP pyupgrade, B bugbear, PL pylint (PLC/PLE/PLR/PLW)
select = ["E", "F", "I", "UP", "B", "PL"]

# black is the formatter; ruff is lint-only (no competing `ruff format` gate).
[tool.black]
line-length = 120
# target-version inferred from requires-python (>=3.14)

[tool.pytest.ini_options]
testpaths = ["tests"]
# Coverage + benchmarks-run-once-without-timing by default; pytest-randomly and
# pytest-xdist plug in automatically (xdist is opt-in via `-n auto`, see noxfile).
addopts = "-q --strict-markers --benchmark-disable --cov=hotel_report --cov-report=term-missing"

[tool.coverage.run]
source = ["hotel_report"]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.bandit.assert_used]
# `assert` is the whole point of test files; bandit still scans them for everything else.
skips = ["*/test_*.py", "*/conftest.py"]

[tool.codespell]
# skip binaries/lockfiles (not prose). "waring" = the venue "Legare Waring House";
# "blcoks" = the client's own footer typo we intentionally reference (to correct it).
skip = "*.docx,*.lock,uv.lock,*.png,*.jpg,*.pdf,.git,.venv,.nox"
ignore-words-list = "waring,blcoks"

[tool.interrogate]
fail-under = 100

[tool.mutmut]
paths_to_mutate = "src/hotel_report/"
tests_dir = "tests/"

[tool.pylint.main]
# docx/docxtpl/lxml are C-extension/untyped libs pylint cannot introspect (no-member noise).
ignored-modules = ["docx", "docxtpl", "lxml"]
py-version = "3.14"

[tool.pylint.format]
max-line-length = 120

[tool.mypy]
files = ["src", "tests"]
mypy_path = "tests"  # so tests can `from conftest import ...`
python_version = "3.14"
plugins = ["pydantic.mypy"]
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
# untyped third-party imports are ejected inline with `# type: ignore[import-untyped]`.
